--- a/index.html
+++ b/index.html
@@ -18,15 +18,13 @@
     <script src='js/OBJLoader.js'></script>
     <script src='js/MTLLoader.js'></script>
     <script src="js/WebGL.js"></script>
-     <!-- <script src="js/frequency.js"></script> -->
     <script src="js/index.js"></script>
-    <script src="js/displace.js"></script>
-    <script src="js/functions.js"></script>
     <script src="lib/stats.min.js"></script>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.5/dat.gui.min.js'></script>
 
-    <!-- <div id="info">What state of being are you living in?</div>
-    <div id="volume">(Please turn volume up)</div> -->
+    <div id="info">What state of being are you living in?</div>
+    <div id="volume">(Please turn volume up)</div>
+    
 
 
 
